--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,20 +1,10 @@
-<div class="row">
+<div class="row" [@init]>
 
     <div class="col-md-5">
         <app-recipe-list></app-recipe-list>
     </div>
 
     <div class="col-md-7">
-        
-        <app-recipe-detail 
-            *ngIf="recipeItem;
-            else infoText"
-            [recipeDetail]="recipeItem">
-        </app-recipe-detail>
-        
-        <ng-template #infoText>
-            <p>Please select a Recipe!</p>        
-        </ng-template>
-        
+        <router-outlet></router-outlet>
     </div>
 </div>
