--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" [@init]>
     <div class="col-xs-10">
 
         <app-shopping-edit></app-shopping-edit>
@@ -7,10 +7,10 @@
 
         <ul class="list-group">
             <a 
-                href="#"
                 class="list-group-item"
                 style="cursor: pointer"
-                *ngFor="let ingredient of ingredients">
+                *ngFor="let ingredient of ingredients; let i = index"
+                (click)="onEditItem(i)">
                     {{ ingredient.name }} ({{ ingredient.amount}})
             </a>
         </ul>
