--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <form action="">
+        <form (ngSubmit)="onSubmit(form)" #form="ngForm">
 
             <div class="row">
 
@@ -10,7 +10,9 @@
                         type="text"
                         id="name"
                         class="form-control"
-                        #nameInput
+                        name="name"
+                        ngModel
+                        required
                     />
                 </div>
 
@@ -20,7 +22,10 @@
                         type="number" 
                         id="amount" 
                         class="form-control"
-                        #amountInput
+                        name="amount"
+                        ngModel
+                        required
+                        pattern="^[1-9]+[0-9]*$"
                     />
                 </div>
 
@@ -31,11 +36,19 @@
                 <div class="col-xs-12">
                     <button 
                         class="btn btn-success" 
-                        type="submit"
-                        (click)="onAddIngredient()">Add
+                        type="submit" [disabled]="!form.valid">
+                        {{ !editMode ? 'Add' : 'Update'}}
                     </button>
-                    <button class="btn btn-danger" type="button">Delete</button>
-                    <button class="btn btn-primary" type="button">Clear</button>
+
+                    <button 
+                        class="btn btn-danger" 
+                        type="button" 
+                        (click)="onDelete()"
+                        [disabled]="!editMode">
+                        Delete
+                    </button>
+                    
+                    <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
                 </div>
 
             </div>
