--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12">
-        <form [formGroup]="recipeForm">
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit">Save</button>
+                    <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
                     <button class="btn btn-danger">Cancel</button>
                 </div>
             </div>
@@ -83,8 +83,20 @@
                         <div class="col-xs-2">
                             <button class="btn btn-danger">X</button>
                         </div>
+                        
 
                     </div>
+                    <div class="row" style="margin-top: 10px; margin-bottom: 10px;">
+                        <div class="col-xs-12">
+                            <button
+                                class="btn btn-success"
+                                type="button"
+                                (click)="onAddIngredient()">
+                                Add Ingredient
+                            </button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </form>
