--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -3,8 +3,21 @@
         <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
             <div class="row">
                 <div class="col-xs-12">
-                    <button class="btn btn-success" type="submit" [disabled]="!recipeForm.valid">Save</button>
-                    <button class="btn btn-danger">Cancel</button>
+
+                    <button 
+                        class="btn btn-success" 
+                        type="submit" 
+                        [disabled]="!recipeForm.valid">
+                        Save
+                    </button>
+
+                    <button 
+                        class="btn btn-danger" 
+                        type="button"
+                        (click)="onCancel()">
+                        Cancel
+                    </button>
+
                 </div>
             </div>
 
@@ -29,14 +42,15 @@
                             type="text"
                             class="form-control"
                             id="imagePath"
-                            formControlName="imagePath">
+                            formControlName="imagePath"
+                            #imagePath>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-xs-12">
-                    <img src="" alt="" class="img-responsive">
+                    <img [src]="imagePath.value" alt="" class="img-responsive">
                 </div>
             </div>
 
@@ -81,7 +95,12 @@
                         </div>
 
                         <div class="col-xs-2">
-                            <button class="btn btn-danger">X</button>
+                            <button 
+                                class="btn btn-danger"
+                                type="button"
+                                (click)="onDeleteIngredient(i)">
+                                X
+                            </button>
                         </div>
                         
 
